organize code into constants

--- a/rel_ros_master_control/rel_ros_master_control/config/modbus.yml
+++ b/rel_ros_master_control/rel_ros_master_control/config/modbus.yml
@@ -39,7 +39,7 @@ holding_registers:
       words: 1
       data_type: "uint16"
       mode: "w"
-    - name: "manifold"
+    - name: "action_manifold"
       address: 5051
       words: 1
       data_type: "uint16"
