--- a/config/hmi/hmi.yml
+++ b/config/hmi/hmi.yml
@@ -1,9 +1,10 @@
   slaves:
     - name: "HMI 0"
-      id: 0
-      host: 0.0.0.0  # localhost for ROS working as HMI slave
-      port: 8845  # 502 is the standard
-      offset: 0
+      hmi_id: 0
+      slave_tcp:
+        host: 0.0.0.0  # localhost for ROS working as HMI slave
+        port: 8845  # 502 is the standard
+        offset: 0
   coil_registers:  # default value to 0
     - name: "open_local_window_1_1"
       address: 0
