--- a/config/hmi/hmi.yml
+++ b/config/hmi/hmi.yml
@@ -1,5 +1,5 @@
   slaves:
-    - name: "HMI 0"
+    - hmi_name: "HMI 0"
       hmi_id: 0
       slave_tcp:
         host: 0.0.0.0  # localhost for ROS working as HMI slave
