--- a/config/hmi/hmi.yml
+++ b/config/hmi/hmi.yml
@@ -173,25 +173,28 @@
     - name: "param_bucket_size_selection"
       address: 40033
       data_type: "uint16"
-    # --------------------------------------- SENSORS START
-    - name: "sensor_material_pressure"
+    - name: "param_pressure_bares_limit"
       address: 40034
       data_type: "uint16"
-    - name: "sensor_material_temperature"
+    # --------------------------------------- SENSORS START
+    - name: "sensor_manual_recycle_count"
       address: 40035
       data_type: "uint16"
-    - name: "sensor_laser_distance"
+    - name: "sensor_material_pressure"
       address: 40036
       data_type: "uint16"
-    - name: "sensor_pressure_regulator_read_set"
+    - name: "sensor_material_temperature"
       address: 40037
       data_type: "uint16"
-    - name: "sensor_pressure_regulator_read_real"
+    - name: "sensor_laser_distance"
       address: 40038
       data_type: "uint16"
-    - name: "sensor_pressure_regulator_valve_read_state"
+    - name: "sensor_pressure_regulator_read_set"
       address: 40039
       data_type: "uint16"
-    - name: "sensor_manual_recycle_count"
+    - name: "sensor_pressure_regulator_read_real"
       address: 40040
+      data_type: "uint16"
+    - name: "sensor_pressure_regulator_valve_read_state"
+      address: 40041
       data_type: "uint16"
