--- a/rel_interfaces/CMakeLists.txt
+++ b/rel_interfaces/CMakeLists.txt
@@ -14,7 +14,8 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/HMI.msg"
-  "msg/IOLinkData.msg"
+  "msg/HMIAction.msg"
+  "msg/HMIUserTask.msg"
 )
 
 if(BUILD_TESTING)
